# fuel-pending-transfer

predicate/: Cargo.toml  Forc.toml
predicate/src/: main.sw
predicate/tests/: harness.rs
