[package]
name = "pending-transfers"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["dmihal <david@dmihal.com>"]
license = "Apache-2.0"

[dev-dependencies]
tokio = { version = "1.12", features = ["rt", "macros"] }
fuels = { version = "0.50.1", features = ["fuel-core-lib"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
